# openmcf

./: .bazelproject  .bazelrc  .env.test  .gitignore  .goreleaser.yaml  BUILD.bazel  CHANGELOG.md  CODE-OF-CONDUCT.md  CONTRIBUTING.md  MODULE.bazel  Makefile  README.md  docker-compose.yml  go.mod  go.sum  go.work.sum  main.diff  main.go
.cursor/info/: api.md  docs.md  hack_manifest.md  pulumi_e2e.md  pulumi_module.md  spec_proto.md  spec_tests.md  spec_validate.md  stack_input.md  stack_outputs.md  terraform_docs.md
.cursor/plans/: add-search-attributes-support-d9b205c3.plan.md  fix-temporal-namespace-bug-61d5bfff.plan.md  refactor-search-attributes-enum-303bfb4b.plan.md  remove-search-attributes-88707c44.plan.md
.github/workflows/: auto-release.app.yaml  auto-release.cli.yaml  auto-release.pulumi-modules.yaml  auto-release.terraform-modules.yaml  auto-release.website.yaml  auto-tag.yaml  release.cli.yaml  release.pulumi-modules.yaml  release.terraform-modules.yaml  release.website.yaml
_changelog/2025-09/: 2025-09-16-manifest-backend-configuration.md
_changelog/2025-10/: 2025-10-10-percona-server-mongodb-operator.md  2025-10-10-postgres-backup-configuration.md  2025-10-11-percona-postgresql-operator.md  2025-10-11-percona-server-mysql-operator-and-improved-error-handling.md  2025-10-16-temporal-search-attributes-refactor.md  2025-10-17-clickhouse-ingress-hostname-field.md  2025-10-17-elasticsearch-ingress-hostname-field.md  2025-10-17-external-dns-cloudflare-support.md  2025-10-17-mongodb-ingress-hostname-field.md  (+16 more)
_issues/: 2025-12-26-104033.deployment-component.feat.expand-temporal-spec-dynamic-config.md  2026-01-06-061930.deployment-component.feat.auth0-client-api-grants.md
_rules/: follow-project-planton-cli-terminal-ux-standards.mdc  local-server-startup.md
apis/: Makefile  buf.gen.yaml  buf.yaml
apis/org/openmcf/app/cloudresource/v1/cloudresourcev1connect/: BUILD.bazel  command.connect.go  query.connect.go
apis/org/openmcf/app/stackupdate/v1/stackupdatev1connect/: BUILD.bazel  command.connect.go  query.connect.go
apis/org/openmcf/provider/digitalocean/digitaloceanfirewall/v1/iac/pulumi/module/: BUILD.bazel  locals.go  main.go
apis/org/openmcf/provider/gcp/gcpcertmanagercert/v1/: BUILD.bazel  README.md  api.pb.go  api.proto  examples.md  spec.pb.go  spec.proto  spec_test.go  stack_input.pb.go  stack_input.proto  stack_outputs.pb.go  stack_outputs.proto
apis/org/openmcf/provider/gcp/gcpcertmanagercert/v1/docs/: README.md
apis/org/openmcf/provider/gcp/gcpcertmanagercert/v1/docs/audit/: 2025-11-14-052934.md
apis/org/openmcf/provider/gcp/gcpcertmanagercert/v1/iac/: overview.md
apis/org/openmcf/provider/gcp/gcpcertmanagercert/v1/iac/hack/: manifest.yaml
apis/org/openmcf/provider/gcp/gcpcertmanagercert/v1/iac/pulumi/: BUILD.bazel  README.md  examples.md  main.go  overview.md
apis/org/openmcf/provider/gcp/gcpcertmanagercert/v1/iac/pulumi/module/: BUILD.bazel  cert_manager_cert.go  locals.go  main.go
apis/org/openmcf/provider/gcp/gcpcertmanagercert/v1/iac/tf/: README.md  examples.md
apis/org/openmcf/shared/: BUILD.bazel  iac.pb.go  iac.proto  metadata.pb.go  metadata.proto
apis/org/openmcf/shared/cloudresourcekind/: BUILD.bazel  cloud_resource_kind.pb.go  cloud_resource_kind.proto  cloud_resource_provider.pb.go  cloud_resource_provider.proto  kubernetes.pb.go  kubernetes.proto
apis/org/openmcf/shared/foreignkey/v1/: BUILD.bazel  foreign_key.pb.go  foreign_key.proto  foreign_key_test.go
apis/org/openmcf/shared/gcp/: BUILD.bazel  gcp.pb.go  gcp.proto
apis/org/openmcf/shared/iac/pulumi/: BUILD.bazel  pulumi.pb.go  pulumi.proto
apis/org/openmcf/shared/iac/terraform/: BUILD.bazel  terraform.pb.go  terraform.proto
apis/org/openmcf/shared/networking/enums/dnsrecordtype/: BUILD.bazel  dns_record_type.pb.go  dns_record_type.proto
apis/org/openmcf/shared/options/: BUILD.bazel  options.pb.go  options.proto
apis/org/openmcf/shared/relationship/v1/: BUILD.bazel  relationship.pb.go  relationship.proto
apis/org/openmcf/shared/validateutil/: BUILD.bazel
app/: Dockerfile.unified  README.md  entrypoint-unified.sh  supervisord.conf
app/backend/internal/server/: BUILD.bazel  server.go
architecture/: README.md  deployment-component.md  specification-guidelies.md
base-images/: README.md
cmd/openmcf/root/: BUILD.bazel  checkout.go  cloud_resource_apply.go  cloud_resource_create.go  cloud_resource_list.go  cloud_resource_update.go  config.go  credential_create.go  credential_get.go  credential_list.go  credential_update.go  destroy.go  downgrade.go  init.go  load_manifest.go  modules_version.go  plan.go  pulumi.go  refresh.go  tofu.go  validate_manifest.go  version.go
cmd/openmcf/root/pulumi/: BUILD.bazel  README.md  cancel.go  destroy.go  init.go  preview.go  update.go
cmd/openmcf/root/terraform/: BUILD.bazel  apply.go  destroy.go  plan.go  refresh.go
cmd/openmcf/root/tofu/: README.md  apply.go  destroy.go  generate_variables.go  init.go  load_tfvars.go  plan.go  refresh.go
cmd/openmcf/root/webapp/: init.go  logs.go  restart.go  start.go  status.go  stop.go
cmd/project-planton/root/terraform/: BUILD.bazel  apply.go  destroy.go  init.go  plan.go  refresh.go
cmd/project-planton/root/webapp/: BUILD.bazel  uninstall.go  webapp.go
docker/: mongo-init.js
docs/: CORS.md
examples/: aws-postgres.yaml  gcp-postgres.yaml  kubernetes-postgres.yaml
internal/cli/ui/: BUILD.bazel  backend.go  clipboard.go  manifest.go  messages.go  styles.go
pkg/iac/pulumi/pulumimodule/provider/gcp/pulumigoogleprovider/: BUILD.bazel  provider.go
pkg/iac/pulumi/pulumimodule/provider/kubernetes/containerresources/: BUILD.bazel  convert_to_pulumi_map.go
pkg/iac/stackinput/providerdetect/: BUILD.bazel  detect.go  guidance.go  validate.go
pkg/iac/stackinput/providerenvvars/: BUILD.bazel  atlas.go  auth0.go  aws.go  azure.go  confluent.go  gcp.go  kubernetes.go  loader.go  openfga.go  proto_loader.go  snowflake.go
pkg/iac/stackinput/stackinputproviderconfig/: BUILD.bazel  backend_options.go  unified_options.go
site/: README.md  package.json
(+4694 files in other folders)
