load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "root",
    srcs = [
        "apply.go",
        "checkout.go",
        "cloud_resource_apply.go",
        "cloud_resource_create.go",
        "cloud_resource_delete.go",
        "cloud_resource_get.go",
        "cloud_resource_list.go",
        "cloud_resource_update.go",
        "config.go",
        "credential_create.go",
        "credential_delete.go",
        "credential_get.go",
        "credential_list.go",
        "credential_update.go",
        "destroy.go",
        "downgrade.go",
        "init.go",
        "load_manifest.go",
        "modules_version.go",
        "plan.go",
        "pull.go",
        "pulumi.go",
        "refresh.go",
        "stack_update_stream_output.go",
        "terraform.go",
        "tofu.go",
        "upgrade.go",
        "validate_manifest.go",
        "version.go",
    ],
    importpath = "github.com/plantonhq/openmcf/cmd/openmcf/root",
    visibility = ["//visibility:public"],
    deps = [
        "//apis/org/openmcf/app/cloudresource/v1:cloudresource",
        "//apis/org/openmcf/app/cloudresource/v1/cloudresourcev1connect",
        "//apis/org/openmcf/app/commons",
        "//apis/org/openmcf/app/credential/v1:credential",
        "//apis/org/openmcf/app/credential/v1/credentialv1connect",
        "//apis/org/openmcf/app/stackupdate/v1:stackupdate",
        "//apis/org/openmcf/app/stackupdate/v1/stackupdatev1connect",
        "//apis/org/openmcf/provider/aws",
        "//apis/org/openmcf/provider/azure",
        "//apis/org/openmcf/provider/gcp",
        "//apis/org/openmcf/shared",
        "//apis/org/openmcf/shared/iac/pulumi",
        "//apis/org/openmcf/shared/iac/terraform",
        "//cmd/openmcf/root/pulumi",
        "//cmd/openmcf/root/terraform",
        "//cmd/openmcf/root/tofu",
        "//internal/cli/cliprint",
        "//internal/cli/flag",
        "//internal/cli/iacflags",
        "//internal/cli/iacrunner",
        "//internal/cli/manifest",
        "//internal/cli/prompt",
        "//internal/cli/staging",
        "//internal/cli/upgrade",
        "//internal/cli/version",
        "//internal/cli/workspace",
        "//internal/manifest",
        "//pkg/crkreflect",
        "//pkg/iac/localmodule",
        "//pkg/iac/provisioner",
        "//pkg/iac/pulumi/pulumistack",
        "//pkg/iac/stackinput",
        "//pkg/iac/stackinput/stackinputproviderconfig",
        "//pkg/iac/tofu/tfbackend",
        "//pkg/iac/tofu/tofumodule",
        "//pkg/kubernetes/kubecontext",
        "@com_connectrpc_connect//:connect",
        "@com_github_fatih_color//:color",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_spf13_cobra//:cobra",
        "@in_gopkg_yaml_v3//:yaml_v3",
        "@org_golang_google_protobuf//proto",
    ],
)
