load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "shared",
    srcs = [
        "iac.pb.go",
        "metadata.pb.go",
    ],
    importpath = "github.com/plantonhq/openmcf/apis/org/openmcf/shared",
    visibility = ["//visibility:public"],
    deps = [
        "//apis/org/openmcf/shared/relationship/v1:relationship",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
    ],
)
