load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "server",
    srcs = ["server.go"],
    importpath = "github.com/plantonhq/openmcf/app/backend/internal/server",
    visibility = ["//app/backend:__subpackages__"],
    deps = [
        "//apis/org/openmcf/app/cloudresource/v1/cloudresourcev1connect",
        "//apis/org/openmcf/app/credential/v1/credentialv1connect",
        "//apis/org/openmcf/app/stackupdate/v1/stackupdatev1connect",
        "//app/backend/internal/database",
        "//app/backend/internal/service",
        "@com_github_sirupsen_logrus//:logrus",
        "@org_golang_x_net//http2",
        "@org_golang_x_net//http2/h2c",
    ],
)
