load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "webapp",
    srcs = [
        "init.go",
        "logs.go",
        "restart.go",
        "start.go",
        "status.go",
        "stop.go",
        "uninstall.go",
        "webapp.go",
    ],
    importpath = "github.com/plantonhq/openmcf/cmd/openmcf/root/webapp",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd/openmcf/root",
        "@com_github_spf13_cobra//:cobra",
    ],
)
