load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "providerdetect",
    srcs = [
        "detect.go",
        "guidance.go",
        "validate.go",
    ],
    importpath = "github.com/plantonhq/project-planton/pkg/iac/stackinput/providerdetect",
    visibility = ["//visibility:public"],
    deps = [
        "//apis/org/project_planton/provider/atlas",
        "//apis/org/project_planton/provider/auth0",
        "//apis/org/project_planton/provider/aws",
        "//apis/org/project_planton/provider/azure",
        "//apis/org/project_planton/provider/civo",
        "//apis/org/project_planton/provider/cloudflare",
        "//apis/org/project_planton/provider/confluent",
        "//apis/org/project_planton/provider/digitalocean",
        "//apis/org/project_planton/provider/gcp",
        "//apis/org/project_planton/provider/kubernetes",
        "//apis/org/project_planton/provider/openfga",
        "//apis/org/project_planton/provider/snowflake",
        "//apis/org/project_planton/shared/cloudresourcekind",
        "//pkg/crkreflect",
        "//pkg/protobufyaml",
        "@com_github_pkg_errors//:errors",
        "@org_golang_google_protobuf//proto",
    ],
)
