load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "providerenvvars",
    srcs = [
        "atlas.go",
        "auth0.go",
        "aws.go",
        "azure.go",
        "confluent.go",
        "gcp.go",
        "kubernetes.go",
        "loader.go",
        "openfga.go",
        "proto_loader.go",
        "snowflake.go",
    ],
    importpath = "github.com/plantonhq/project-planton/pkg/iac/stackinput/providerenvvars",
    visibility = ["//visibility:public"],
    deps = [
        "//apis/org/project_planton/provider/atlas",
        "//apis/org/project_planton/provider/auth0",
        "//apis/org/project_planton/provider/aws",
        "//apis/org/project_planton/provider/azure",
        "//apis/org/project_planton/provider/confluent",
        "//apis/org/project_planton/provider/gcp",
        "//apis/org/project_planton/provider/kubernetes",
        "//apis/org/project_planton/provider/openfga",
        "//apis/org/project_planton/provider/snowflake",
        "//apis/org/project_planton/shared/cloudresourcekind",
        "//pkg/crkreflect",
        "//pkg/protobufyaml",
        "@com_github_google_uuid//:uuid",
        "@com_github_pkg_errors//:errors",
        "@in_gopkg_yaml_v3//:yaml_v3",
        "@org_golang_google_protobuf//proto",
    ],
)
