load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "stackinputproviderconfig",
    srcs = ["unified_options.go"],
    importpath = "github.com/plantonhq/project-planton/pkg/iac/stackinput/stackinputproviderconfig",
    visibility = ["//visibility:public"],
    deps = [
        "//apis/org/project_planton/shared/cloudresourcekind",
        "//internal/cli/flag",
        "//pkg/iac/stackinput/providerdetect",
        "@com_github_pkg_errors//:errors",
        "@com_github_spf13_pflag//:pflag",
    ],
)
