load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "pulumi",
    srcs = ["pulumi.pb.go"],
    importpath = "github.com/plantonhq/openmcf/apis/org/openmcf/shared/iac/pulumi",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
    ],
)
