load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "cloudresourcev1connect",
    srcs = [
        "command.connect.go",
        "query.connect.go",
    ],
    importpath = "github.com/plantonhq/openmcf/apis/org/openmcf/app/cloudresource/v1/cloudresourcev1connect",
    visibility = ["//visibility:public"],
    deps = [
        "//apis/org/openmcf/app/cloudresource/v1:cloudresource",
        "@com_connectrpc_connect//:connect",
    ],
)
