load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "stackupdatev1connect",
    srcs = [
        "command.connect.go",
        "query.connect.go",
    ],
    importpath = "github.com/plantonhq/openmcf/apis/org/openmcf/app/stackupdate/v1/stackupdatev1connect",
    visibility = ["//visibility:public"],
    deps = [
        "//apis/org/openmcf/app/stackupdate/v1:stackupdate",
        "@com_connectrpc_connect//:connect",
    ],
)
