load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "gcpcertmanagercert",
    srcs = [
        "api.pb.go",
        "spec.pb.go",
        "stack_input.pb.go",
        "stack_outputs.pb.go",
    ],
    importpath = "github.com/plantonhq/openmcf/apis/org/openmcf/provider/gcp/gcpcertmanagercert/v1",
    visibility = ["//visibility:public"],
    deps = [
        "//apis/org/openmcf/provider/gcp",
        "//apis/org/openmcf/shared",
        "//apis/org/openmcf/shared/foreignkey/v1:foreignkey",
        "//apis/org/openmcf/shared/options",
        "@build_buf_gen_go_bufbuild_protovalidate_protocolbuffers_go//buf/validate",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
    ],
)

go_test(
    name = "gcpcertmanagercert_test",
    srcs = ["spec_test.go"],
    embed = [":gcpcertmanagercert"],
    deps = [
        "//apis/org/openmcf/shared",
        "//apis/org/openmcf/shared/foreignkey/v1:foreignkey",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
