load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "pulumigoogleprovider",
    srcs = ["provider.go"],
    importpath = "github.com/plantonhq/openmcf/pkg/iac/pulumi/pulumimodule/provider/gcp/pulumigoogleprovider",
    visibility = ["//visibility:public"],
    deps = [
        "//apis/org/openmcf/provider/gcp",
        "//pkg/iac/pulumi/pulumimodule/pulumi/pulumioutput",
        "@com_github_pkg_errors//:errors",
        "@com_github_pulumi_pulumi_gcp_sdk_v9//go/gcp",
        "@com_github_pulumi_pulumi_sdk_v3//go/pulumi",
    ],
)
