load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "module",
    srcs = [
        "firewall.go",
        "locals.go",
        "main.go",
        "outputs.go",
    ],
    importpath = "github.com/plantonhq/openmcf/apis/org/openmcf/provider/digitalocean/digitaloceanfirewall/v1/iac/pulumi/module",
    visibility = ["//visibility:public"],
    deps = [
        "//apis/org/openmcf/provider/digitalocean",
        "//apis/org/openmcf/provider/digitalocean/digitaloceanfirewall/v1:digitaloceanfirewall",
        "//apis/org/openmcf/shared/cloudresourcekind",
        "//pkg/iac/pulumi/pulumimodule/provider/digitalocean/digitaloceanlabelkeys",
        "//pkg/iac/pulumi/pulumimodule/provider/digitalocean/pulumidigitaloceanprovider",
        "@com_github_pkg_errors//:errors",
        "@com_github_pulumi_pulumi_digitalocean_sdk_v4//go/digitalocean",
        "@com_github_pulumi_pulumi_sdk_v3//go/pulumi",
    ],
)
